# Swallow

./: .gitignore  LICENSE  README.md  pyproject.toml  swallow_cicd.py  swallow_cli.py  swallow_core.py  swallow_init.py  swallow_ssg.py
swallow_assets/: extensions.json
swallow_assets/default_assets/scripts/: script_blog_articles.js  script_blog_index.js
swallow_assets/default_assets/styles/: style_blog.css  style_common.css
swallow_assets/default_templates/: article_template.html  list_template.html  sitemap_template.xml
