[project]
name = "swallow_ssg"
version = "0.1.0"
description = ""
authors = [
    {name = "Zeta-Sharp",email = "rikeidanshi@duck.com"}
]
readme = "README.md"
package-mode = false
requires-python = ">=3.14,<4.0.0"
dependencies = [
    "markdown (>=3.9,<4.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "python-frontmatter (>=1.1.0,<2.0.0)",
    "python-markdown-math (>=0.9,<0.10)",
    "tomli-w (>=1.2.0,<2.0.0)",
    "send2trash (>=2.1.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
swallow = "swallow_cli:main"